Transition border color

--- a/src/app.css
+++ b/src/app.css
@@ -90,6 +90,7 @@ h2 {
   text-transform: uppercase;
   border-top: 1px solid var(--color-line);
   border-bottom: 1px solid var(--color-line);
+  transition: border-color var(--color-transition);
 }
 
 h3 {
