--- a/src/app.css
+++ b/src/app.css
@@ -129,15 +129,31 @@ h4 + p {
 }
 
 a {
+  position: relative;
   color: var(--color-text);
   font-weight: 700;
   text-decoration: none;
   transition: color var(--color-transition);
 }
 
-a:hover {
-  text-decoration: underline;
-  text-decoration-thickness: from-font;
+a::before {
+  pointer-events: none;
+  content: '';
+  display: block;
+  position: absolute;
+  width: 100%;
+  height: 2px;
+  left: 0;
+  top: 1.2em;
+  background-color: var(--color-line);
+  transform-origin: 100% 50%;
+  transform: scale3d(0, 1, 1);
+  transition: transform 0.25s ease, background-color var(--color-transition);
+}
+
+a:hover::before {
+  transform-origin: 0% 50%;
+  transform: scale3d(1, 1, 1);
 }
 
 strong {
