--- a/src/app.css
+++ b/src/app.css
@@ -136,24 +136,26 @@ a {
   transition: color var(--color-transition);
 }
 
-a::before {
-  pointer-events: none;
-  content: '';
-  display: block;
-  position: absolute;
-  width: 100%;
-  height: 2px;
-  left: 0;
-  top: 1.2em;
-  background-color: var(--color-line);
-  transform-origin: 100% 50%;
-  transform: scale3d(0, 1, 1);
-  transition: transform 0.25s ease, background-color var(--color-transition);
-}
+@media (hover: hover) {
+  a::before {
+    pointer-events: none;
+    content: '';
+    display: block;
+    position: absolute;
+    width: 100%;
+    height: 2px;
+    left: 0;
+    top: 1.2em;
+    background-color: var(--color-line);
+    transform-origin: 100% 50%;
+    transform: scale3d(0, 1, 1);
+    transition: transform 0.25s ease-in-out, background-color var(--color-transition);
+  }
 
-a:hover::before {
-  transform-origin: 0% 50%;
-  transform: scale3d(1, 1, 1);
+  a:hover::before {
+    transform-origin: 0% 50%;
+    transform: scale3d(1, 1, 1);
+  }
 }
 
 strong {
