--- a/src/app.css
+++ b/src/app.css
@@ -133,28 +133,18 @@ a {
   color: var(--color-text);
   font-weight: 700;
   text-decoration: none;
-  transition: color var(--color-transition);
+  background: linear-gradient(to right, var(--color-line), var(--color-line));
+  background-size: 0 2px;
+  background-position: 0 1.2em;
+  background-repeat: no-repeat;
+  transition: color var(--color-transition), background-size 0.3s ease;
 }
 
 @media (hover: hover) {
-  a::before {
-    pointer-events: none;
-    content: '';
-    display: block;
-    position: absolute;
-    width: 100%;
-    height: 2px;
-    left: 0;
-    top: 1.2em;
-    background-color: var(--color-line);
-    transform-origin: 100% 50%;
-    transform: scale3d(0, 1, 1);
-    transition: transform 0.25s ease-in-out, background-color var(--color-transition);
-  }
-
-  a:hover::before {
-    transform-origin: 0% 50%;
-    transform: scale3d(1, 1, 1);
+  a:hover,
+  a:focus {
+    outline: none;
+    background-size: 100% 2px;
   }
 }
 
